# web_ui

./: .env.example  .gitignore  .npmrc  Licence  README.md  electron-main.js  index.html  loading.html  metadata.json  package-lock.json  package.json  preload.js  revert.cjs  server.ts  tmp_server_out.txt  tsconfig.json  vite.config.ts  wrangler.jsonc
.lumina/: anthropic.json
.lumina_opencode/: opencode.jsonc
assets/: App_final.tsx  App_fixed.tsx  App_updated.tsx  main_fixed.tsx
bat/: app.bat  build.bat
coder/: index.html
convex/: agents.ts  automations.ts  consolidation.ts  dashboard.ts  drafts.ts  events.ts  memory.ts  messages.ts  schema.ts  settings.ts  usageRecords.ts
docs/: SANDBOX_ARCHITECTURE.md  SECURITY.md
electron/: main.ts  preload.ts
scripts/: build-vm-image.ps1  build-vm-image.sh  bundle-guest-runtime.js  electron-dev.cjs  prepare-desktop-runtime.mjs
server/: agent_routes.ts  ai_sdk_agent.ts  ai_sdk_providers.ts  anthropicConverter.ts  automations.ts  bridge-client.ts  broadcast.ts  clean.ts  composio.ts  consolidation.ts  llama.ts  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/agent/: Cargo.toml
src/agent/agents/: constants.ts
src/agent/src/: config.rs  main.rs
src/agent/src/agent/: context.rs  executor.rs  loop.rs  mod.rs  planner.rs  reflector.rs  state.rs
src/agent/src/llm/: mod.rs  ollama.rs
src/agent/src/streaming/: mod.rs  sse.rs
src/agent/src/tools/: bash.rs  list_dir.rs  mod.rs  read_file.rs  search.rs  write_file.rs
(+227 files in other folders)
