[package]
name = "lumina-ai-chat"
version = "1.0.0"
description = "Lumina AI Chat"
authors = ["Lumina"]
edition = "2021"

[lib]
name = "lumina_ai_chat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
urlencoding = "2.1"
